# realworld-axum-sqlx

./: Cargo.toml  LICENSE  README.md  docker-compose.yaml
migrations/: 20260625093305_init.sql  20260625103306_users.sql  20260701083218_follow.sql  20260703093146_articles.sql
src/: config.rs  error.rs  extractor.rs  lib.rs  main.rs  state.rs
src/articles/: dto.rs  handlers.rs  mod.rs  router.rs  utils.rs
src/comments/: dto.rs  handlers.rs  router.rs
src/profiles/: dto.rs  handlers.rs  router.rs
src/users/: dto.rs  handlers.rs  router.rs
