[package]
name = "conduit"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.45"
clap = { version = "4.6.1", features = ["derive", "env"] }
dotenvy = "0.15.7"
sqlx = { version = "0.9.0", features = [
  "postgres",
  "runtime-tokio",
  "uuid",
  "chrono",
] }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.23.4", features = ["serde", "v4", "v7"] }
