[package]
name = "conduit"
version = "0.1.0"
edition = "2024"
publish = false
authors = ["dnlzrgz <contact@dnlzrgz.com>"]

[dependencies]
anyhow = "1.0.102"
argon2 = { version = "0.5.3", features = ["std"] }
axum = "0.8.9"
chrono = "0.4.45"
clap = { version = "4.6.1", features = ["derive", "env"] }
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = [
  "postgres",
  "runtime-tokio",
  "uuid",
  "chrono",
] }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.23.4", features = ["serde", "v7"] }
tower-http = { version = "0.7.0", features = ["trace"] }
thiserror = "2.0.18"
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
